--- a/.gitignore
+++ b/.gitignore
@@ -200,7 +200,7 @@ themes/default-bootstrap/modules/*/mails/*
 /var/sessions/*
 !var/sessions/.gitkeep
 !var/SymfonyRequirements.php
-!var/class_stub.php.php
+!var/class_stub.php
 !/var/modules
 /var/modules/*
 !/var/modules/.gitkeep
