--- a/src/PrestaShopBundle/Resources/config/services/core/shop.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/shop.yml
@@ -6,3 +6,4 @@ services:
     class: 'PrestaShop\PrestaShop\Core\Shop\LogoUploader'
     arguments:
       - '@=service("prestashop.adapter.legacy.context").getContext().shop'
+      - '@PrestaShop\PrestaShop\Core\Image\ImageFormatConfiguration'
