put multiple image generation for logo and image not found behind feature flag

--- a/src/PrestaShopBundle/Resources/config/services/core/shop.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/shop.yml
@@ -7,3 +7,4 @@ services:
     arguments:
       - '@=service("prestashop.adapter.legacy.context").getContext().shop'
       - '@PrestaShop\PrestaShop\Core\Image\ImageFormatConfiguration'
+      - '@prestashop.core.admin.feature_flag.repository'
