--- a/src/PrestaShopBundle/Resources/config/services/core/shop.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/shop.yml
@@ -8,3 +8,4 @@ services:
       - '@=service("prestashop.adapter.legacy.context").getContext().shop'
       - '@PrestaShop\PrestaShop\Core\Image\ImageFormatConfiguration'
       - '@prestashop.core.admin.feature_flag.repository'
+      - !php/const _PS_IMG_DIR_
