WIP saving progress. Rewriting query because of limited ORM

--- a/src/PrestaShopBundle/Resources/config/services/adapter/attribute.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/attribute.yml
@@ -16,3 +16,4 @@ services:
     arguments:
       - '@doctrine.dbal.default_connection'
       - '%database_prefix%'
+      - '@PrestaShop\PrestaShop\Adapter\Product\Repository\ProductMultiShopRepository'
