--- a/src/PrestaShopBundle/Resources/config/services/adapter/attribute_group.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/attribute_group.yml
@@ -24,6 +24,7 @@ services:
   PrestaShop\PrestaShop\Adapter\Product\AttributeGroup\QueryHandler\GetAttributeGroupListHandler:
     arguments:
       - '@PrestaShopBundle\Entity\Repository\AttributeGroupRepository'
+      - '@PrestaShop\PrestaShop\Adapter\Attribute\Repository\AttributeRepository'
     tags:
       - name: 'tactician.handler'
         command: 'PrestaShop\PrestaShop\Core\Domain\Product\AttributeGroup\Query\GetAttributeGroupList'
