Make the same name and Matrix for skipped required workflows

--- a/.github/workflows/integration-skip.yml
+++ b/.github/workflows/integration-skip.yml
@@ -12,6 +12,11 @@ concurrency:
   cancel-in-progress: true
 jobs:
   integration:
+    name: Integration tests
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php: [ '7.2', '7.3', '7.4', '8.0', '8.1' ]
+      fail-fast: false
     steps:
       - run: 'echo "No tests required"'
