--- a/src/PrestaShopBundle/Resources/config/services/adapter/country.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/country.yml
@@ -21,34 +21,28 @@ services:
     arguments:
       - '@prestashop.adapter.data_provider.country'
 
-  prestashop.adapter.country.repository.country_repository:
-    class: 'PrestaShop\PrestaShop\Adapter\Country\Repository\CountryRepository'
-    arguments:
-      - '@prestashop.adapter.country.validate.country_validator'
+  PrestaShop\PrestaShop\Adapter\Country\Repository\CountryRepository:
+    autowire: true
 
   prestashop.adapter.country.command_handler.add_country_handler:
     public: true
     class: 'PrestaShop\PrestaShop\Adapter\Country\CommandHandler\AddCountryHandler'
-    arguments:
-      - '@prestashop.adapter.country.repository.country_repository'
+    autowire: true
     tags:
       - { name: 'tactician.handler', command: 'PrestaShop\PrestaShop\Core\Domain\Country\Command\AddCountryCommand' }
 
   prestashop.adapter.country.command_handler.edit_country_handler:
     public: true
     class: 'PrestaShop\PrestaShop\Adapter\Country\CommandHandler\EditCountryHandler'
-    arguments:
-      - '@prestashop.adapter.country.repository.country_repository'
+    autowire: true
     tags:
       - { name: 'tactician.handler', command: 'PrestaShop\PrestaShop\Core\Domain\Country\Command\EditCountryCommand' }
 
   prestashop.adapter.country.query_handler.get_country_for_editing_handler:
     public: true
     class: 'PrestaShop\PrestaShop\Adapter\Country\QueryHandler\GetCountryForEditingHandler'
-    arguments:
-      - '@prestashop.adapter.country.repository.country_repository'
+    autowire: true
     tags:
       - { name: 'tactician.handler', command: 'PrestaShop\PrestaShop\Core\Domain\Country\Query\GetCountryForEditing' }
 
-  prestashop.adapter.country.validate.country_validator:
-    class: PrestaShop\PrestaShop\Adapter\Country\Validate\CountryValidator
+  PrestaShop\PrestaShop\Adapter\Country\Validate\CountryValidator:
