--- a/src/PrestaShopBundle/Resources/config/services/core/domain/country.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/domain/country.yml
@@ -1,6 +1,11 @@
 services:
   _defaults:
-    public: true
+    autowire: true
+
+  PrestaShop\PrestaShop\Core\Domain\Country\ZipCodePatternResolverInterface: '@PrestaShop\PrestaShop\Core\Domain\Country\ZipCodePatternResolver'
+  PrestaShop\PrestaShop\Core\Domain\Country\ZipCodePatternResolver:
 
   prestashop.core.domain.country.zip_code_format_resolver:
-    class: 'PrestaShop\PrestaShop\Core\Domain\Country\ZipCodePatternResolver'
+    alias: 'PrestaShop\PrestaShop\Core\Domain\Country\ZipCodePatternResolver'
+    public: true
+    deprecated: ~
