--- a/src/PrestaShopBundle/Resources/config/services/core/form/choice_provider.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/form/choice_provider.yml
@@ -66,7 +66,7 @@ services:
     arguments:
       - '@=service("prestashop.adapter.legacy.context").getLanguage().id'
       - '@prestashop.adapter.data_provider.order_state'
-      - '@prestashop.core.util.color_brightness_calculator'
+      - '@PrestaShop\PrestaShop\Core\Util\ColorBrightnessCalculator'
       - '@translator'
 
   prestashop.core.form.choice_provider.invoice_model_by_name:
