--- a/src/PrestaShopBundle/Resources/config/services/core/grid/grid_data_factory.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/grid_data_factory.yml
@@ -328,7 +328,7 @@ services:
       - "@=service('prestashop.adapter.legacy.context').getContext().employee.id_lang"
       - '@doctrine.dbal.default_connection'
       - '%database_prefix%'
-      - "@prestashop.core.util.file_size.size_converter"
+      - '@PrestaShop\PrestaShop\Core\Util\File\FileSizeConverter'
     calls:
       - [ setTranslator, [ '@translator' ] ]
 
