--- a/src/PrestaShopBundle/Resources/config/services/bundle/twig.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/twig.yml
@@ -1,10 +1,10 @@
 services:
   _defaults:
     public: true
+    autoconfigure: true
 
   PrestaShopBundle\Twig\LocaleExtension:
     public: false
-    autoconfigure: true
     arguments:
       - '@=service("prestashop.adapter.legacy.context").getContext().language.date_format_lite'
 
@@ -24,8 +24,6 @@ services:
 
   prestashop.twig.extension.stringloader:
     class: Twig\Extension\StringLoaderExtension
-    tags:
-      - { name: twig.extension }
 
   prestashop.twig.extension.layout:
     class: PrestaShopBundle\Twig\LayoutExtension
@@ -34,8 +32,6 @@ services:
       - "%kernel.environment%"
       - "@prestashop.adapter.legacy.configuration"
       - "@prestashop.adapter.data_provider.currency"
-    tags:
-      - { name: twig.extension }
 
   prestashop.twig.extension.translation:
     class: PrestaShopBundle\Twig\TranslationsExtension
@@ -43,13 +39,9 @@ services:
     properties:
       logger: "@logger"
       translator: "@translator"
-    tags:
-      - { name: twig.extension }
 
   prestashop.twig.extension.data_formatter:
     class: PrestaShopBundle\Twig\DataFormatterExtension
-    tags:
-      - { name: twig.extension }
 
   prestashop.twig.extension.hook:
     class: PrestaShopBundle\Twig\HookExtension
@@ -57,21 +49,16 @@ services:
       - "@prestashop.core.hook.dispatcher"
       - "@prestashop.adapter.data_provider.module"
       - "@=service('prestashop.adapter.legacy.context').getContext().employee?service('prestashop.core.admin.module.repository'):null"
-    tags:
-      - { name: twig.extension }
 
   prestashop.bundle.twig.extension.column:
     class: 'PrestaShopBundle\Twig\Extension\GridExtension'
     arguments:
       - '@twig'
       - '@prestashop.static_cache.adapter'
-    tags:
-      - { name: twig.extension }
 
   prestashop.bundle.twig.extension.documentation_link_provider_extension:
     class: 'PrestaShopBundle\Twig\Extension\DocumentationLinkExtension'
     autowire: true
-    autoconfigure: true
 
   prestashop.twig.extension.context_iso_code_provider_extension:
     class: PrestaShopBundle\Twig\ContextIsoCodeProviderExtension
@@ -80,8 +67,6 @@ services:
     properties:
       logger: "@logger"
       translator: "@translator"
-    tags:
-      - { name: twig.extension }
 
   prestashop.twig.extension.path_with_back_url_extension:
     class: PrestaShopBundle\Twig\Extension\PathWithBackUrlExtension
@@ -90,15 +75,10 @@ services:
       - '@PrestaShop\PrestaShop\Core\Util\Url\BackUrlProvider'
       - '@=service("request_stack") ? service("request_stack") : null'
     public: true
-    tags:
-      - { name: twig.extension }
 
   prestashop.bundle.twig.extension.color_brightness_calculator_extension:
     class: PrestaShopBundle\Twig\Extension\ColorBrightnessCalculatorExtension
-    arguments:
-      - '@PrestaShop\PrestaShop\Core\Util\ColorBrightnessCalculator'
-    tags:
-      - { name: twig.extension }
+    autowire: true
 
   prestashop.bundle.twig.extension.js_router_metadata_extension:
     class: PrestaShopBundle\Twig\Extension\JsRouterMetadataExtension
@@ -106,8 +86,6 @@ services:
       - '@=service("request_stack")'
       - '@=service("security.csrf.token_manager")'
       - '@=service("prestashop.user_provider").getUsername()'
-    tags:
-      - { name: twig.extension }
 
   prestashop.bundle.twig.extension.localization_extension:
     class: 'PrestaShopBundle\Twig\Extension\LocalizationExtension'
@@ -117,29 +95,19 @@ services:
       - "@prestashop.core.localization.locale.repository"
       - '@=service("prestashop.adapter.legacy.context").getContext().language'
       - '@=service("prestashop.adapter.legacy.context").getContext().currency'
-    tags:
-      - { name: twig.extension }
 
   prestashop.bundle.twig.extension.number_extension:
     class: 'PrestaShopBundle\Twig\Extension\NumberExtension'
-    tags:
-      - { name: twig.extension }
 
   prestashop.twig.extension.multistore_components_extension:
     class: 'PrestaShopBundle\Twig\Extension\MultistoreComponentsExtension'
     arguments:
       - '@prestashop.core.admin.multistore'
-    tags:
-      - { name: twig.extension }
 
   prestashop.bundle.twig.extension.multistore_url:
     class: 'PrestaShopBundle\Twig\Extension\MultistoreUrlExtension'
     arguments:
       - '@=service("request_stack")'
-    tags:
-      - { name: twig.extension }
 
   prestashop.bundle.twig.extension.entity_search_extension:
     class: 'PrestaShopBundle\Twig\Extension\EntitySearchExtension'
-    tags:
-      - { name: twig.extension }
