Tax Rules Group : Fixed feedbacks

--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
@@ -2184,8 +2184,7 @@ services:
     tags:
       - { name: form.type }
 
-  form.type.improve.international.tax.tax_rules_group_type:
-    class: 'PrestaShopBundle\Form\Admin\Improve\International\Tax\TaxRulesGroupType'
+  PrestaShopBundle\Form\Admin\Improve\International\Tax\TaxRulesGroupType:
     parent: 'form.type.translatable.aware'
     public: true
     arguments:
