--- a/src/PrestaShopBundle/Resources/config/services/adapter/tax_rules_group.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/tax_rules_group.yml
@@ -2,18 +2,14 @@ services:
   _defaults:
     public: true
 
-  prestashop.adapter.tax_rules_group.command_handler.add_tax_rules_group_handler:
-    class: 'PrestaShop\PrestaShop\Adapter\TaxRulesGroup\CommandHandler\AddTaxRulesGroupHandler'
-    arguments:
-      - '@prestashop.adapter.tax_rules_group.repository.tax_rules_group_repository'
+  PrestaShop\PrestaShop\Adapter\TaxRulesGroup\CommandHandler\AddTaxRulesGroupHandler:
+    autowire: true
     tags:
       - name: 'tactician.handler'
         command: 'PrestaShop\PrestaShop\Core\Domain\TaxRulesGroup\Command\AddTaxRulesGroupCommand'
 
-  prestashop.adapter.tax_rules_group.command_handler.edit_tax_rules_group_handler:
-    class: 'PrestaShop\PrestaShop\Adapter\TaxRulesGroup\CommandHandler\EditTaxRulesGroupHandler'
-    arguments:
-      - '@prestashop.adapter.tax_rules_group.repository.tax_rules_group_repository'
+  PrestaShop\PrestaShop\Adapter\TaxRulesGroup\CommandHandler\EditTaxRulesGroupHandler:
+    autowire: true
     tags:
       - name: 'tactician.handler'
         command: 'PrestaShop\PrestaShop\Core\Domain\TaxRulesGroup\Command\EditTaxRulesGroupCommand'
@@ -52,10 +48,9 @@ services:
     arguments:
       - '@doctrine.dbal.default_connection'
       - '%database_prefix%'
-      - '@prestashop.adapter.tax_rules_group.validate.tax_rules_group_validator'
+      - '@PrestaShop\PrestaShop\Adapter\TaxRulesGroup\Validate\TaxRulesGroupValidator'
 
-  prestashop.adapter.tax_rules_group.validate.tax_rules_group_validator:
-    class: PrestaShop\PrestaShop\Adapter\TaxRulesGroup\Validate\TaxRulesGroupValidator
+  PrestaShop\PrestaShop\Adapter\TaxRulesGroup\Validate\TaxRulesGroupValidator: ~
 
   prestashop.adapter.tax_rules_group.repository.tax_rules_group_repository:
     alias: PrestaShop\PrestaShop\Adapter\TaxRulesGroup\Repository\TaxRulesGroupRepository
