--- a/src/PrestaShopBundle/Resources/config/services/core/grid/doctrine_query_builder.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/doctrine_query_builder.yml
@@ -457,10 +457,10 @@ services:
     arguments:
       - '@prestashop.core.query.doctrine_search_criteria_applicator'
 
-  prestashop.core.grid.query_builder.customer_groups:
+  PrestaShop\PrestaShop\Core\Grid\Query\CustomerGroupsQueryBuilder:
     class: 'PrestaShop\PrestaShop\Core\Grid\Query\CustomerGroupsQueryBuilder'
     parent: 'prestashop.core.grid.abstract_query_builder'
     arguments:
       - '@prestashop.core.query.doctrine_search_criteria_applicator'
       - "@=service('prestashop.adapter.legacy.context').getContext().language.id"
-    public: true
+    public: false
