--- a/src/PrestaShopBundle/Resources/config/services/adapter/admin.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/admin.yml
@@ -11,9 +11,9 @@ services:
   prestashop.adapter.admin.page_preference:
     alias: PrestaShop\PrestaShop\Adapter\Admin\PagePreference
     deprecated: ~
-    public: false
 
   prestashop.adapter.legacy_db:
+    public: true
     class: 'Db'
     factory: [ 'Db', 'getInstance' ]
     deprecated: '%service_id% service is deprecated and will be removed in 8.0.'
