Handle duplicate row action in every shop context

--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
@@ -1822,6 +1822,7 @@ services:
       - '@prestashop.adapter.shop.url.product_provider'
       - '@prestashop.adapter.shop.url.product_preview_provider'
       - '@router'
+      - '@PrestaShop\PrestaShop\Adapter\Feature\MultistoreFeature'
       - "@=service('prestashop.adapter.shop.context').getContextShopID()"
     tags:
       - { name: form.type }
