--- a/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/product_v2/product.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/product_v2/product.yml
@@ -149,7 +149,7 @@ admin_products_v2_delete_from_shop:
     productId: \d+
     shopId: \d+
 
-admin_products_v2_duplicate:
+admin_products_v2_duplicate_all_shops:
   path: /{productId}/duplicate
   methods: [ POST ]
   defaults:
@@ -161,6 +161,34 @@ admin_products_v2_duplicate:
       id_product: productId
   requirements:
     productId: \d+
+
+admin_products_v2_duplicate_shop:
+  path: /{productId}/duplicate/shop/{shopId}
+  methods: [ POST ]
+  defaults:
+    _controller: PrestaShopBundle\Controller\Admin\Sell\Catalog\Product\ProductController::duplicateShopAction
+    _legacy_controller: AdminProducts
+    _legacy_link:
+      - AdminProducts:duplicate
+    _legacy_parameters:
+      id_product: productId
+  requirements:
+    productId: \d+
+    shopId: \d+
+
+admin_products_v2_duplicate_shop_group:
+  path: /{productId}/duplicate/shop_group/{shopGroupId}
+  methods: [ POST ]
+  defaults:
+    _controller: PrestaShopBundle\Controller\Admin\Sell\Catalog\Product\ProductController::duplicateShopGroupAction
+    _legacy_controller: AdminProducts
+    _legacy_link:
+      - AdminProducts:duplicate
+    _legacy_parameters:
+      id_product: productId
+  requirements:
+    productId: \d+
+    shopGroupId: \d+
 
 admin_products_v2_toggle_status:
   path: /{productId}/toggle_status/{shopId}
