--- a/src/PrestaShopBundle/Resources/config/services/adapter/image.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/image.yml
@@ -31,7 +31,10 @@ services:
   prestashop.adapter.image.uploader.supplier_image_uploader:
     class: 'PrestaShop\PrestaShop\Adapter\Image\Uploader\SupplierImageUploader'
 
-  PrestaShop\PrestaShop\Adapter\Image\ImageGenerator: ~
+  PrestaShop\PrestaShop\Adapter\Image\ImageGenerator:
+    arguments:
+      - '@prestashop.core.admin.feature_flag.repository'
+      - '@PrestaShop\PrestaShop\Core\Image\ImageFormatConfiguration'
 
   PrestaShop\PrestaShop\Adapter\Image\ImageValidator:
     arguments:
