--- a/src/PrestaShopBundle/Resources/config/services/core/security.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/security.yml
@@ -9,3 +9,10 @@ services:
     class: 'PrestaShop\PrestaShop\Core\Security\HtaccessFolderGuard'
     arguments:
       - '%kernel.root_dir%/Resources/security/.htaccess.dist'
+
+  PrestaShop\PrestaShop\Core\Security\AccessCheckerInterface:
+    alias: 'PrestaShop\PrestaShop\Adapter\Security\Access'
+    public: false
+  PrestaShop\PrestaShop\Core\Security\EmployeePermissionProviderInterface:
+    alias: 'PrestaShop\PrestaShop\Adapter\Security\Access'
+    public: false
