Update phpstan.neon.dist to prevent future usage

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -86,3 +86,11 @@ parameters:
             disallowIn:
                 - src/*
 
+  disallowedConstants:
+        -
+            class: PrestaShopBundle\Security\Voter\PageVoter
+            constant: ['CREATE', 'READ', 'UPDATE', 'DELETE', 'LEVEL_DELETE', 'LEVEL_CREATE', 'LEVEL_READ', 'LEVEL_UPDATE']
+            message: 'Use \PrestaShop\PrestaShop\Core\Security\AccessCheckerInterface constants instead.'
+            disallowIn:
+                - src/*
+
